# JoyWM

./: Cargo.toml  LICENSE  README.md  flake.nix  justfile
licenses/: smithay-mit.txt
src/: input.rs  main.rs  state.rs  winit.rs
src/grabs/: mod.rs  move_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  mod.rs  xdg_shell.rs
