[package]
name = "smallvil"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
bitflags = "2.10.0"

[dependencies.smithay]
version = "0.7.0"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
]
